[gd_scene load_steps=2 format=3 uid="uid://cfnfquwrmhs5x"]

[ext_resource type="Script" uid="uid://1xkdgy51yqx3" path="res://src/ui/widgets/status_row.gd" id="1_yvxdc"]

[node name="StatusRow" type="RichTextLabel"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Poisoned"
fit_content = true
script = ExtResource("1_yvxdc")
