[gd_scene load_steps=2 format=3 uid="uid://cfnfquwrmhs5x"]

[ext_resource type="Script" uid="uid://1xkdgy51yqx3" path="res://src/ui/widgets/status_row.gd" id="1_yvxdc"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvxdc")

[node name="StatusText" type="RichTextLabel" parent="."]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "Blessing of Vitality"
fit_content = true
scroll_active = false
autowrap_mode = 0
script = ExtResource("1_yvxdc")

[node name="StatusValue" type="RichTextLabel" parent="."]
unique_name_in_owner = true
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "20"
fit_content = true
scroll_active = false
horizontal_alignment = 2
script = ExtResource("1_yvxdc")
